--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,10 @@ const { title } = Astro.props;
       crossorigin="anonymous"
     />
 
+    <!-- Fuse.js for fuzzy search -->
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js@7.1.0/dist/fuse.min.js"
+    ></script>
+
     <link rel="stylesheet" href="/src/styles/responsive-override.css" />
   </head>
   <body>
